# faktum-ai-tools

./: README.md  pyproject.toml  setup.py
src/: util.py
src/faktum_ai_tools/: util.py
src/faktum_ai_tools.egg-info/: PKG-INFO  SOURCES.txt
src/util/: util.py
