[tool.poetry]
name = "faktum-ai-tools"
version = "0.1.6"
description = ""
authors = ["jessalfredsen <jessalfredsen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.3.1"
SQLAlchemy = "^1.4.22"
pyodbc = "^4.0.31"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
